--- a/src/app/plant-select/plant-select.component.scss
+++ b/src/app/plant-select/plant-select.component.scss
@@ -1,10 +1,7 @@
 @import "src/more-sass/_variables.scss";
-.plant-select-body {
-  @include container;
 
-  h1 {
-    @include fancy-font;
-  }
+h1 {
+  @include fancy-font;
 }
 
 .location-select {
@@ -35,4 +32,6 @@
 
 .close-bttn {
   @include cute-button();
+  padding: 0.2rem 0.8rem;
+  margin: 1rem 0;
 }
