--- a/src/app/plant-select/plant-select.component.html
+++ b/src/app/plant-select/plant-select.component.html
@@ -4,7 +4,7 @@
     <li *ngFor="let location of locations">
       <button (click)="openModal('custom-modal-1')">
         <div class="location-link">
-          {{ location | uppercase }}
+          {{ location }}
         </div>
       </button>
     </li>
