--- a/src/app/plant-select/plant-select.component.scss
+++ b/src/app/plant-select/plant-select.component.scss
@@ -1,5 +1,7 @@
 @import "src/more-sass/_variables.scss";
-
+.plant-select-body {
+  padding-top: $navHeaderHeight;
+}
 h1 {
   @include fancy-font;
 }
