--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="home-body">
   <h1>Which plant would you like to have serviced?</h1>
 
-  <div class="plant-select" *ngFor="let plant of plants">
+  <div *ngFor="let plant of plants">
     <a routerLink="/{{ plant.name }}">
-      <p>{{ plant.name | uppercase }}</p>
+      <p class="plant-select">{{ plant.name | uppercase }}</p>
     </a>
   </div>
 </div>
