--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -16,6 +16,7 @@ $modalZ: $navZ - 100;
 
   .modal-body {
     padding: 1rem;
+    padding-bottom: 2rem;
 
     background: white;
     /* margin exposes part of the modal background */
