--- a/src/app/plant-select/plant-select.component.html
+++ b/src/app/plant-select/plant-select.component.html
@@ -12,10 +12,7 @@
 
   <app-modal id="custom-modal-1">
     <app-problem-form [currentPlantName]="plantName"></app-problem-form>
-    <button
-      (click)="closeModal('custom-modal-1')"
-      routerLink="/MakeRequestHome"
-    >
+    <button (click)="closeModal('custom-modal-1')" routerLink="/Profile">
       <div class="close-bttn">
         CLOSE
       </div>
