--- a/src/more-sass/_variables.scss
+++ b/src/more-sass/_variables.scss
@@ -62,6 +62,10 @@ $userInfoHeight: 21vh;
   &:hover {
     background-color: $darkColorHover;
   }
+
+  &:disabled {
+    background-color: $disabledColor !important;
+  }
 }
 
 @mixin container {
