--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -94,3 +94,21 @@ $actionWidth: 5rem;
     font-size: 0.5rem;
   }
 }
+
+.form-error {
+  p,
+  ul,
+  li {
+    font-size: 0.5rem;
+    color: #732121;
+    //text-align: right;
+    text-shadow: none;
+  }
+
+  ul {
+    list-style-type: circle;
+    li {
+      text-align: left;
+    }
+  }
+}
