--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -78,7 +78,8 @@
             "
           >
             <p>
-              Please enter a valid phone number.
+              Please enter a valid phone number, starting with the area code.
+              (+233...)
             </p>
           </div>
         </div>
