--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -51,7 +51,7 @@
   </div>
 
   <div class="nav-footer">
-    <p>Serwerage Systems Ghana Ltd</p>
+    <p>Sewerage Systems Ghana Ltd</p>
     <p>
       clean environment. <br />
       green energy.
