--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="profile-body">
   <div class="user-info">
     <div>YOU ARE LOGGED IN AS</div>
-    <div class="username">User Name</div>
+    <div class="username">juliet</div>
     <div class="after-username">
       <div>STATUS: ADMIN</div>
       <div>YOUR LOGIN EXPIRES IN 30:00</div>
