--- a/src/app/show-requests/show-requests.component.html
+++ b/src/app/show-requests/show-requests.component.html
@@ -13,7 +13,7 @@
       </div>
       <div>REQUEST ID: {{ req.request_id }}</div>
       <div>{{ req.location | uppercase }}</div>
-      <div>JULY 18, 2019 - 8:30 AM</div>
+      <div>{{ req.time_sent | uppercase }}</div>
       <div>STATUS: {{ req.status }}</div>
       <div *ngIf="admin">AUTHOR: {{ req.author }}</div>
     </div>
