--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -25,8 +25,10 @@
       <div class="user-info">
         <p>You are logged in as</p>
         <h4>{{ _UserService.currentUserValue.username }}</h4>
-        <p>Status: Admin</p>
-        <p>Your session will expire in 30:00</p>
+        <p *ngIf="_UserService.currentUserValue.is_staff">Status: Admin</p>
+        <p *ngIf="!_UserService.currentUserValue.is_staff">
+          Status: General User
+        </p>
       </div>
       <a routerLink="/Profile"> View Your Requests</a>
       <br />
