log ins and such

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -71,7 +71,7 @@
             </p>
           </div>
         </div>
-        <div class="field">
+        <!-- <div class="field">
           <input type="text" formControlName="phoneNumber" placeholder="" />
           <label>PHONE NUMBER</label>
           <div
@@ -87,7 +87,7 @@
               (+233...)
             </p>
           </div>
-        </div>
+        </div> -->
 
         <div class="field">
           <input type="text" formControlName="password" placeholder="" />
